week9/docker-kubernetes-helm/containerisation/k8s/monitoring/proxy-service-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: https-proxy
  labels:
    app: https-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: https-nginx
  template:
    metadata:
      labels:
        app: https-nginx
    spec:
      containers:
      - name: https-proxy
        image: nginx:1.21.5
        volumeMounts:
          - name: nginx-config
            mountPath: /etc/nginx/conf.d/grafana-https.conf
            subPath: grafana-https.conf
          - name: my-tls-secret
            readOnly: true
            mountPath: "/etc/nginx/tls"
        resources:
          requests:
            memory: "10Mi"
            cpu: "10m"
          limits:
            memory: "50Mi"
            cpu: "20m"
        ports:
        - containerPort: 8080
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: my-tls-secret
          secret:
            secretName: my-tls-secret
