week9/docker-kubernetes-helm/containerisation/k8s/monitoring/proxy-service-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: https-proxy
spec:
  selector:
    app: https-nginx
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8080
