week9/docker-kubernetes-helm/containerisation/k8s/monitoring/proxy-service-app/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-production"
  name: rpc-app
  namespace: default
spec:
  rules:
    - host: https-proxy.devops-masterclass.link
      http:
        paths:
          - backend:
              serviceName: https-proxy
              servicePort: 443
            path: /
  tls:
      - hosts:
          - https-proxy.devops-masterclass.link
        secretName: https-proxy.devops-masterclass.link
